--- a/build.gradle
+++ b/build.gradle
@@ -18,18 +18,13 @@ dependencies {
 	testImplementation 'io.projectreactor:reactor-test'
 
 	// needed on my M1 machine, see https://github.com/netty/netty/issues/11020
-	runtimeOnly "io.netty:netty-resolver-dns-native-macos:4.1.76.Final:osx-aarch_64"
+	runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.77.Final:osx-aarch_64'
 
 	// https://docs.spring.io/spring-boot/docs/current/reference/html/configuration-metadata.html#appendix.configuration-metadata.annotation-processor.configuring
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
-	// https://mvnrepository.com/artifact/com.squareup.okhttp3/okhttp
-	testImplementation 'com.squareup.okhttp3:okhttp:4.9.3'
-
 	// https://mvnrepository.com/artifact/com.squareup.okhttp3/mockwebserver
 	testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
-
-
 }
 
 dependencies {
