Refactored GovDataRepository and added tests

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,34 +1,29 @@
-federal-ministries:
+govdata:
+  baseurl: "https://www.govdata.de/ckan/api/3/action"
   whitelist:
     - "auswaertiges-amt"
-    - "dpma"
-    - "bundesamt-fur-justiz"
-    - "bmf"
-    - "bzst"
-    - "zoll"
-    - "itzbund"
-    - "bmvg"
-    - "bmi"
-    - "bbsr"
     - "badv"
-    - "bva"
-    - "statistisches-bundesamt"
-    - "bmas"
-    - "baua"
-    - "bundesministerium-fur-bildung-und-forschung"
-    - "bmfsfj"
-    - "bmz"
-    - "bmwi"
     - "bafa"
     - "bam"
+    - "baua"
+    - "bbsr"
+    - "bmas"
     - "bmel"
-    - "bvl"
+    - "bmf"
+    - "bmfsfj"
+    - "bmi"
+    - "bmvg"
+    - "bmwi"
+    - "bmz"
     - "bsa"
-    - "mri"
+    - "bundesamt-fur-justiz"
+    - "bundesministerium-fur-bildung-und-forschung"
+    - "bva"
+    - "bvl"
+    - "bzst"
+    - "dpma"
+    - "itzbund"
     - "mcloud"
-
-govdata.baseurl: "https://www.govdata.de/ckan/api/3/action"
-
-
-
-
+    - "mri"
+    - "statistisches-bundesamt"
+    - "zoll"
