--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/com.squareup.okhttp3/mockwebserver
 	testImplementation 'com.squareup.okhttp3:mockwebserver:4.9.3'
+
+	// https://mvnrepository.com/artifact/io.projectreactor/reactor-test
+	testImplementation 'io.projectreactor:reactor-test:3.4.18'
 }
 
 dependencies {
