Added actuator and enabled metrics, health and info endpoints

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -27,3 +27,12 @@ govdata:
     - "mri"
     - "statistisches-bundesamt"
     - "zoll"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - metrics
+          - health
+          - info
